*feat:stabilize news with JDK 17 : EXO-60546 (#654) (#664)
add necessary configuration arglines