@@ -129,6 +129,13 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>@{argLine} ${env.MAVEN_OPTS} --add-opens=java.base/java.security=ALL-UNNAMED   --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED  --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED  --add-opens=java.base/java.util.regex=ALL-UNNAMED   --add-opens=java.base/java.lang=ALL-UNNAMED  --add-opens=java.base/java.util.concurrent=ALL-UNNAMED </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok-maven-plugin</artifactId>
         <executions>
